# rey

./: Cargo.toml  README.md  build.rs
src/: camera.rs  compute.wgsl  cornell_box.rs  display.wgsl  lib.rs  main.rs  objects.rs  pipeline.rs  ray.rs  shader.comp  shader.frag  shader.vert
