[package]
name = "rey"
version = "0.1.0"
authors = ["Simon Niedermayr <14186588+KeKsBoTer@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
image =  "0.23.13"
rand = "0.8.3"
wgpu = "0.7.0"
wgpu-subscriber = "0.1.0"
pollster = "0.2.1"
winit = "0.24"
futures = "0.3"
env_logger = "0.7"
bytemuck = { version = "1.5.1", features = [ "derive" ] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
rayon = "1.4"
shaderc = "0.7"