[package]
name = "rey"
version = "0.1.0"
authors = ["Simon Niedermayr <14186588+KeKsBoTer@users.noreply.github.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
image =  "0.23.13"
wgpu = { version = "0.8.1"}
winit = "0.24"
futures = "0.3"
bytemuck = { version = "1.5.1", features = [ "derive" ] }
egui = "0.12"
egui_wgpu_backend = "0.8"
egui_winit_platform = "0.7"
egui_demo_lib = "0.12"
epi = "0.12"